# stata-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES_AND_FLOWS.md  GO.md  README.md  assumptions.md  install.ps1  install.sh  plan.md  pyproject.toml
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_f5c2b15380c9ddfc77e0539683808888fe596af4_20260514_105935_uncommited-changes.json
.github/workflows/: build-test.yml  publish.yml  release.yml
benchmarks/: benchmark_arrow_export.py  create_large_dataset.py  profile_arrow.py  profile_graph_export_formats.py  profile_graph_ops.py  test_correctness.py
benchmarks/history/: benchmark_20260514_082911_2acff52.json
docs/: graph-detection-optimization.md  performance-optimizations.md
features/01-cli-daemon/: review.md  test_background_task.sh  test_daemon_lifecycle.sh  test_state_persistence.sh
features/02-log-mitigation/: review.md
features/02-log-mitigation/test_scripts/: benchmark_backward_scan.py  benchmark_backward_scan_v2.py  benchmark_backward_scan_v3.py  benchmark_backward_scan_v4.py  benchmark_backward_scan_v5.py  error_log.txt  generate_error_log.do  generate_large_log.do  generate_very_large_log.do  large_log_smcl.smcl  run_with_smcl_log.do  run_with_text_log.do
features/03-text-first-logs/: review.md  run_verification.sh  test_graph_behavior.do  test_mixed_output.do
features/04-graph-handling/: review.md
features/05-error-extraction/: review.md
features/05-error-extraction/test_scripts/: test_assertion.do  test_break_error.do  test_capture_noisily.do  test_custom_error.do  test_custom_rc_program.do  test_mata_capture.do  test_mata_error.do  test_nested_error.do  test_program_error.do  test_smcl_mode.do  test_smcl_mode.smcl  test_standard_error.do  test_structured_markers.do  test_text_log_explicit.do
features/06-session-management/: review.md
features/06-session-management/test_artifacts/: dataset_a.dta  dataset_b.dta  sleepy.do  socket_test.py  test1a.do  test1b.do  test4a.do  test6a.do  test6b.do
features/06-session-management/test_artifacts/proc_b/: test4b.do
features/07-background-tasks/: review.md
features/07-background-tasks/test_scripts/: background_test.sh  bigjob.do  longjob.do  poll_log.py  test_ps_status.sh  test_python_poll.sh  test_signal_detail.sh  test_sigterm.sh  test_tailf.sh
features/08-data-inspection/: review.md
features/09-mock-test-mode/: review.md
features/09-mock-test-mode/responses/: assert_failure.txt  capture_error_111.txt  describe_auto.txt  display_1plus1.txt  error_111.txt  exit_codes.txt  reg_price_mpg.txt  summarize_auto.txt  sysuse_auto.txt  tabulate_rep78.txt
features/10-skill-migration/: review.md
features/11-break-cancel/: check_c_break.do  check_poll.do  check_stata_method.do  check_stata_plugin.do  check_stp.do  find_pystata.do  review.md  test_long.do  test_long_py.do  test_long_stata_cmd.do  test_py_signal.do  test_pystata_break.do  test_sfi_break.do  test_sfi_break2.do  test_sfi_detail.do  test_signals.do  test_sigterm_break.do  test_thread_interrupt.do  test_thread_interrupt2.do  test_while.do
features/12-help-system/: help_regress_clean_output.txt  help_regress_raw_output.txt  review.md
plans/: GO-TEST.md  GO.md
scripts/install/: verify.py
scripts/maintenance/: sync_version.py
skills/stata-log/: SKILL.md
skills/stata-run/: SKILL.md
skills/stata-setup/: SKILL.md
skills/stata-toolkit/: SKILL.md
src/stata_agent/: __init__.py  __main__.py  cli.py  daemon.py  discovery.py  error_extractor.py  graph_handler.py  linter.py  log_manager.py  mock_backend.py  models.py  rpc_client.py  session.py  skills_installer.py  stata_client.py  worker.py
src/stata_agent/_extract_deep/: __init__.py  _extract_deep.pyx
src/stata_agent/plugin/: AGENTS.md  README.md  gemini-extension.json
src/stata_agent/statest/: __init__.py  junit.py  models.py  runner.py  statest.mata
testdata/: big_trace_with_buried_error.do
tests/: conftest.py
tests/benchmarks/: conftest.py  run_benchmarks.sh  run_real_benchmarks.py  test_benchmark_cli_daemon.py  test_benchmark_code_execution.py  test_benchmark_data_inspection.py  test_benchmark_graph_operations.py  test_benchmark_helpers.py  test_benchmark_linter.py  test_benchmark_log_operations.py  test_benchmark_results_help.py  test_benchmark_runner.py
tests/cli/: test_statest_cli.sh
tests/e2e/: test_full_pipeline.py
tests/install/: test_e2e_install.py  test_install_sh.py  test_verify.py
tests/install/helpers/: mock_uv.sh
tests/integration/: test_error_extractor_buried.py  test_mock_daemon.py  test_mock_daemon_extended.py  test_stata_client.py  test_statest_runner_mock.py
tests/statest/: statest_conftest.do
tests/statest/expected_failures/: fail_assert_macro_fail.do  fail_assert_matrix_fail.do  fail_assert_rc_fail.do  fail_assert_scalar_fail.do  fail_assert_scalar_tol_fail.do  fail_failure_capture.do  fail_teardown_runs_on_fail.do
tests/statest/test_fixtures/: statest_setup.do  statest_teardown.do  test_assertion_index_reset_after_setup.do  test_setup_runs_before_test.do  test_teardown_runs_on_pass.do
tests/statest/test_mata/: test_assert_macro_pass.do  test_assert_matrix_pass.do  test_assert_rc_pass.do  test_assert_scalar_pass.do  test_assert_scalar_tol_pass.do
tests/statest/test_runner/: ignore_me.do  test_discovery.do  test_run_single.do  test_run_suite.do
tests/statest/test_sessions/: test_session_isolation.do  test_session_teardown.do
tests/unit/: test___main__.py  test_auto_upgrade.py  test_cli.py  test_cli_handlers.py  test_daemon_extended.py  test_daemon_unit.py  test_error_extractor.py  test_graph_handler.py  test_linter.py  test_log_manager.py  test_mock_backend_extended.py  test_mock_backend_fuzz.py  test_mock_daemon_unit.py  test_rpc_client.py  test_rpc_client_edge.py  test_semantic_release.py  test_session.py  test_skills_installer.py  test_statest_discover.py  test_statest_junit.py  test_statest_models.py  test_worker.py
worker/: package.json  wrangler.toml
worker/dashboard/: index.html
worker/src/: index.js
worker/tests/: telemetry.test.mjs
(+42 files in other folders)
