[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stata-agent"
version = "0.1.0"
description = "CLI-native Stata integration for AI agents. Run code, inspect data, retrieve results, export graphs, and test do-files."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"}
]
maintainers = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"}
]
keywords = [
    "stata-agent",
    "stata",
    "statistics",
    "econometrics",
    "data-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pystata-x>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/tmonk/stata-agent"
Repository = "https://github.com/tmonk/stata-agent"
Documentation = "https://github.com/tmonk/stata-agent"

[project.scripts]
stata-agent = "stata_agent.cli:main"

[project.optional-dependencies]
mock = []
data-browser = ["pyarrow>=14.0"]
dev = [
    "build>=1.3.0",
    "hatch>=1.16.2",
    "twine>=6.2.0",
    "ruff>=0.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.0.0",
    "python-semantic-release>=9.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stata_agent"]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "/uv.lock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=stata_agent --cov-report=term-missing"
markers = [
    "requires_stata: tests that need a live Stata license (deselect with '-m \"not requires_stata\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.semantic_release]
version_variables = [
    "src/stata_agent/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.4.0",
]
