[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stata-agent"
dynamic = ["version"]
description = "CLI-native Stata integration for AI agents. Run code, inspect data, retrieve results, export graphs, and test do-files."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"}
]
maintainers = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"}
]
keywords = [
    "stata-agent",
    "stata",
    "statistics",
    "econometrics",
    "data-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pystata-x>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/tmonk/stata-agent"
Repository = "https://github.com/tmonk/stata-agent"
Documentation = "https://github.com/tmonk/stata-agent"

[project.scripts]
stata-agent = "stata_agent.cli:main"

[project.optional-dependencies]
mock = []
data-browser = ["pyarrow>=14.0"]
dev = [
    "build>=1.3.0",
    "hatch>=1.16.2",
    "twine>=6.2.0",
    "ruff>=0.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "python-semantic-release>=9.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stata_agent"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "/uv.lock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v -m 'not slow and not benchmark'"
markers = [
    "requires_stata: tests that need a live Stata license (deselect with '-m \"not requires_stata\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests that complete in under 5 seconds (default run target)",
    "benchmark: marks pytest-benchmark performance tests (not run in default CI)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["stata_agent"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]
package = true

[tool.semantic_release]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]


[dependency-groups]
dev = [
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.4.0",
]
